config-secret-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: config-secret-demo

spec:
  containers:
  - name: demo
    image: busybox

    command:
    - sleep
    - "3600"
