configmap-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: configmap-demo

spec:
  containers:
  - name: demo
    image: busybox

    command:
    - sleep
    - "3600"
