nginx-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-test
  namespace: dev

spec:
  containers:
  - name: nginx
    image: nginx
