statefulset-storage.yaml
# apiVersion: apps/v1
# kind: StatefulSet

# metadata:
#   name: web

# spec:
#   serviceName: "web"

#   replicas: 3

#   selector:
#     matchLabels:
#       app: nginx

#   template:
#     metadata:
#       labels:
#         app: nginx

#     spec:
#       containers:
#       - name: nginx
#         image: nginx:latest

#         volumeMounts:
#         - name: data
#           mountPath: /usr/share/nginx/html

#   volumeClaimTemplates:
#   - metadata:
#       name: data

#     spec:
#       accessModes:
#       - ReadWriteOnce

#       storageClassName: ebs-sc

#       resources:
#         requests:
#           storage: 1Gi

#fixing for phase 12
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: web

spec:
  serviceName: "web"

  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: nginx
        image: nginx:latest

        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
  - metadata:
      name: data

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: ebs-sc

      resources:
        requests:
          storage: 1Gi
