statefulset.yaml
# apiVersion: apps/v1
# kind: StatefulSet

# metadata:
#   name: web

# spec:
#   serviceName: "web"

#   replicas: 3

#   selector:
#     matchLabels:
#       app: nginx

#   template:
#     metadata:
#       labels:
#         app: nginx

#     spec:
#       containers:
#       - name: nginx
#         image: nginx:latest

#to fix the conflict in phase 12 uppdaing as below;

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: web

spec:
  serviceName: "web"

  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: nginx
        image: nginx:latest
