volume-demo.yaml
apiVersion: v1
kind: Pod

metadata:
  name: volume-demo

spec:
  containers:
  - name: demo
    image: busybox

    command:
    - sleep
    - "3600"

    volumeMounts:

    - name: config-volume
      mountPath: /etc/config

    - name: secret-volume
      mountPath: /etc/secret

  volumes:

  - name: config-volume
    configMap:
      name: app-config

  - name: secret-volume
    secret:
      secretName: db-secret
