headless-service.yaml
# apiVersion: v1
# kind: Service

# metadata:
#   name: web

# spec:
#   clusterIP: None

#   selector:
#     app: nginx

#   ports:
#   - port: 80

#fixing for phase 12

apiVersion: v1
kind: Service

metadata:
  name: web

spec:
  clusterIP: None

  selector:
    app: web

  ports:
  - port: 80
